--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,6 @@ ACCESS_TOKEN_SECRET=123
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=1234
 REFRESH_TOKEN_EXPIRY=10d
+CLOUDINARY_CLOUD_NAME=CKEY
+CLOUDINARY_API_KEY=339988358312817
+CLOUDINARY_API_SECRET=_G3DYThA6RexhFSFChSLtxjCNXM
